<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">wizenet</string>
    <string name="fa_icon_mobile">&#xf3a2;</string>
    <string name="fa_icon_contacts">&#xf419;</string>
    <string name="fa_icon_reminder">&#xf402;</string>
    <string name="fa_icon_toolbox">&#xf27b;</string>
    <string name="fa_icon_settings">&#xf2f7;</string>
    <string name="fa_icon_masofon">&#xf421;</string>
    <string name="fa_icon_call">&#xf2d2;</string>
    <string name="fa_icon_mail">&#xf2eb;</string>
    <string name="fa_icon_sms">&#xf3b2;</string>
    <string name="fa_icon_scanner">&#xf346;</string>
    <string name="fa_icon_customers_contacts">&#xf2d9;</string>
    <string name="fa_icon_cart">&#xf370;</string>
    <string name="fa_icon_order">&#xf137;</string>
    <string name="fa_icon_download">&#xf41f;</string>
    <string name="fa_icon_edit">&#xf2bf;</string>
    <string name="fa_icon_location">&#xf456;</string>
    <string name="fa_icon_sign">&#xf417;</string>
    <string name="fa_icon_car">&#xf36f;</string>
    <string name="fa_icon_play">&#xf215;</string>
    <string name="fa_icon_stop">&#xf24f;</string>
    <string name="fa_icon_telephone">&#xf4b8;</string>
    <string name="fa_icon_asterisk">&#xf314;</string>
    <string name="fa_icon_headphones">&#xf140;</string>
    <string name="fa_icon_codepen">&#xf4dc;</string>
    <string name="fa_icon_clock">&#xf402;</string>
    <string name="fa_icon_paper">&#xf471;</string>
    <string name="fa_icon_paperclip">&#xf20f;</string>
    <string name="fa_icon_list">&#xf453;</string>
    <string name="fa_icon_briefcase">&#xf3ee;</string>
    <string name="fa_icon_folder">&#xf434;</string>
    <string name="fa_icon_contact">&#xf419;</string>
    <string name="fa_icon_alert">&#xf100;</string>
    <string name="fa_icon_arrow_right">&#xf125;</string>
    <string name="fa_icon_comments">&#xf35b;</string>
    <string name="fa_icon_contacts_book">&#xf3e9;</string>
    <string name="fa_icon_new_user">&#xf39f;</string>
    <string name="fa_icon_approval">&#xf383;</string>
    <string name="fa_icon_search">&#xf2f5;</string>
    <string name="fa_icon_plus">&#xf217;</string>
    <string name="fa_icon_delete">&#xf37f;</string>
    <string name="fa_icon_thumbsup">&#xf251;</string>
    <string name="fa_icon_barcode">&#xf3dc;</string>
    <string name="fa_icon_compose">&#xf12c;</string>
    <string name="fa_icon_filling">&#xf429;</string>
    <string name="fa_icon_cash">&#xf316;</string>
    <string name="fa_icon_search2">&#xf2f5;</string>
    <string name="fa_icon_map">&#xf203;</string>
    <string name="fa_icon_earth">&#xf276;</string>
    <string name="fa_icon_email">&#xf422;</string>
    <string name="fa_icon_info">&#xf19f;</string>
    <string name="fa_icon_close">&#xf2d7;</string>
    <!--<string name="fa_icon_comments">&#xf0c9;</string>-->

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_save_location">SaveLocationActivity</string>

    <string-array name="brew_array">
        <item>Cappuccino</item>
        <item>Espresso</item>
        <item>Mocha</item>
        <item>Caffè Americano</item>
        <item>Cafe Zorro</item>
    </string-array>
    <string name="title_activity_customers">CustomersActivity</string>
    <string name="title_activity_pre_main">PreMainActivity</string>
    <string name="filter">filter</string>
    <string name="main_menu">main menu</string>
    <string name="main_frag">main frag</string>
    <string name="Control_Panel">Control Panel</string>
    <string name="contactus">contact us</string>
    <string name="messages">messages</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">Wizenet</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>

</resources>
