<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
    android:orientation="horizontal"
    android:weightSum="1">

    <TextView
        android:id="@+id/call"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:text="@string/fa_icon_call" />

    <TextView
        android:id="@+id/sendsms"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:text="@string/fa_icon_sms" />

    <TextView
        android:id="@+id/goToCustomers"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:text="@string/fa_icon_customers_contacts"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_weight="0.99"
        android:gravity="center_vertical"
        android:text="hello"
        android:textDirection="rtl"
        android:textSize="8pt" />


</LinearLayout>
    <!--android:layout_width="100dp"-->
    <!--android:layout_height="50dp"-->